--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 \setcounter{page}{0}
 \pagenumbering{roman}
 
-% \input{frontmatter/preface}
+\input{frontmatter/preface}
 \input{frontmatter/abstract}
 
 \cleardoublepage
@@ -60,7 +60,7 @@
 \setcounter{chapter}{0}
 \renewcommand{\thechapter}{\Alph{chapter}}
 \renewcommand\chaptername{Appendix}
-\input{appendix}
+% \input{appendix}
 \newpage\null\thispagestyle{empty}\newpage
 %End bibliography
 %================================================================================================================
