--- a/frontmatter/preface.tex
+++ b/frontmatter/preface.tex
@@ -1,3 +1,7 @@
 %\let\cleardoublepage\clearpage
 \addcontentsline{toc}{chapter}{Preface}
 \chapter*{Preface}
+This project report is the result of the course TMA4500 Industrial Mathematics, Specialization Project at the Norwegian University of Science and Technology, Department of Mathematical Sciences. I would like to thank the group from the Computational Geosciences in the department of Mathematics and Cybernetics at SINTEF Digital, consisting of my supervisor Knut-Andreas Lie, Olav Møyner, Øystein Klemetsdal and Atgeirr Rassmussen, for valuable guidance through this project.
+
+\today \\
+Sindre Grøstad
